<?xml version="1.0"?>
<package format="2">
  <name>mujoco</name>
  <version>3.3.5</version>
  <description>The wrapper of MuJoCo</description>

  <maintainer email="sugihara@jsk.imi.i.u-tokyo.ac.jp">Kazuki Sugihara</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
